--- a/src/App.scss
+++ b/src/App.scss
@@ -1406,6 +1406,7 @@ footer {
     font-weight: 700;
     text-align: center;
     margin-bottom: 0;
+    max-width: 80%;
   }
 }
 @media (max-width: 700px) {
