--- a/src/App.scss
+++ b/src/App.scss
@@ -1737,3 +1737,443 @@ footer {
     height: 600px;
   }
 }
+.bckOther {
+  z-index: -10;
+  position: absolute;
+  width: 100vw;
+  max-height: 100vh;
+  object-fit: cover;
+}
+
+.other_container {
+  margin-bottom: 180px;
+}
+
+.zayavka__h1_container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Open Sans Hebrew Condensed";
+  font-size: 68px;
+  font-weight: 700;
+  margin: 38px 0 65px 0;
+}
+
+.quick__exchange_time {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  justify-content: space-between;
+  padding: 0 20px 0 20px;
+}
+
+.exchange__time_el {
+  display: flex;
+  gap: 24px;
+  width: 47%;
+}
+
+.exchange__time_span {
+  display: flex;
+  align-items: center;
+  font-family: Roboto;
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 24px;
+  text-align: left;
+}
+
+.order_blue {
+  color: #b2cfe0;
+}
+
+.quick__exchange_curr {
+  display: flex;
+  align-items: center;
+  gap: 32px;
+  width: 100%;
+  margin-bottom: 36px;
+}
+
+.order_currency {
+  padding: 23px 20px 23px 20px;
+  border-radius: 20px;
+  background: #1e377999;
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+  justify-content: space-between;
+}
+
+.order__currency_left {
+  display: flex;
+  gap: 16px;
+  align-items: center;
+}
+
+.order__curr_end {
+  text-align: end;
+}
+
+.order__currency_left_txt {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.order__currency_left_txt {
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.order__currency_left_txt_p_send {
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 400;
+  color: #82b6d3;
+}
+
+.order_persInfo {
+  display: flex;
+  align-items: center;
+  gap: 21px;
+  flex-direction: column;
+  margin-bottom: 36px;
+}
+
+.order__persInfo_h3 {
+  font-family: "Open Sans Hebrew Condensed";
+  font-size: 32px;
+  font-weight: 700;
+}
+
+.order_persInfo_content {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  width: 80%;
+}
+
+.order__persInfo_el {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+}
+
+.order__persInfo_emailWord {
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.order__persInfo_email {
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  color: #b2cfe0;
+}
+
+.order_status {
+  width: 100%;
+  border-radius: 20px;
+  padding: 20px;
+  background: #1e377999;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  color: #b2cfe0;
+  margin-bottom: 62px;
+}
+
+// .order__quick_exchange_container {
+//   height: auto;
+//   z-index: 1;
+// }
+
+.order_instruction {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 36px;
+}
+
+.order__instruction_h3 {
+  font-family: Open Sans Hebrew Condensed;
+  font-size: 32px;
+  font-weight: 700;
+}
+
+.order__instruction_punkty {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  align-items: center;
+}
+
+.order__instruction_punkt {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  max-width: 45%;
+}
+
+.punkt_number {
+  background: linear-gradient(102.87deg, #ff038b 41.29%, #326cff 96.96%),
+    linear-gradient(165.87deg, #ff038b 10.2%, #326cff 131.2%);
+  min-height: 32px;
+  min-width: 32px;
+  border-radius: 50%;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.punkt_p {
+  font-family: Roboto;
+  font-size: 15px;
+  font-weight: 500;
+  color: #b2cfe0;
+}
+
+.exchange_container_padding {
+  border-radius: 32px;
+}
+
+.order_padding {
+  backdrop-filter: blur(5px);
+  padding: 21px;
+}
+.wrapper {
+  position: relative;
+  overflow: hidden; /* Приховує частини картинки, що виходять за межі */
+}
+
+.content {
+  position: relative;
+  z-index: 10;
+}
+
+.exchange__time_img {
+  height: 42px;
+  width: 42px;
+}
+
+@media (max-width: 1000px) {
+  .time_line {
+    display: none;
+  }
+}
+
+@media (max-width: 1000px) {
+  .order_exch_curr {
+    display: none;
+  }
+}
+
+@media (max-width: 1000px) {
+  .zayavka__h1_container {
+    font-family: Open Sans Hebrew Condensed;
+    font-size: 32px;
+    font-weight: 700;
+    margin-bottom: 38px;
+  }
+}
+
+@media (max-width: 1000px) {
+  .quick__exchange_time {
+    flex-direction: column;
+    gap: 12px;
+    margin-bottom: 12px;
+    padding: 0;
+  }
+}
+
+@media (max-width: 1000px) {
+  .exchange__time_img {
+    width: 32px;
+    height: 32px;
+  }
+}
+
+@media (max-width: 1000px) {
+  .order_padding {
+    padding: 15px 10px 15px 10px;
+  }
+}
+
+@media (max-width: 1000px) {
+  .bckOther {
+    top: 300px;
+  }
+}
+
+@media (max-width: 600px) {
+  .bckOther {
+    top: 400px;
+  }
+}
+
+@media (max-width: 350px) {
+  .bckOther {
+    top: 500px;
+  }
+}
+
+@media (max-width: 1000px) {
+  .exchange__time_el {
+    width: 100%;
+    gap: 5px;
+    font-family: Roboto;
+    font-size: 15px;
+    font-weight: 500;
+  }
+}
+@media (max-width: 1000px) {
+  .order__persInfo_h3 {
+    font-family: Open Sans Hebrew Condensed;
+    font-size: 24px;
+    font-weight: 700;
+  }
+}
+@media (max-width: 1000px) {
+  .order_persInfo {
+    gap: 16px;
+  }
+}
+@media (max-width: 1000px) {
+  .order_persInfo_content {
+    flex-direction: column;
+    margin: 0 auto;
+    width: auto;
+    gap: 10px;
+  }
+}
+@media (max-width: 1000px) {
+  .order__persInfo_el {
+    width: auto;
+  }
+}
+@media (max-width: 1000px) {
+  .order_status {
+    padding-top: 0;
+    padding-bottom: 0;
+    background: none;
+  }
+}
+@media (max-width: 1000px) {
+  .order__status_p {
+    display: none;
+  }
+}
+
+.order__status_p_mob {
+  display: block;
+}
+
+@media (max-width: 1000px) {
+  .order__instruction_h3 {
+    font-family: Open Sans Hebrew Condensed;
+    font-size: 24px;
+    font-weight: 700;
+  }
+}
+
+@media (max-width: 1000px) {
+  .order__instruction_punkty {
+    flex-wrap: nowrap;
+    flex-direction: column;
+  }
+}
+@media (max-width: 1000px) {
+  .order__instruction_punkt {
+    max-width: 100%;
+    width: 100%;
+  }
+}
+@media (max-width: 1000px) {
+  .order_btn {
+    margin-top: 0;
+  }
+}
+@media (max-width: 1000px) {
+  .other_container {
+    margin-bottom: 56px;
+  }
+}
+
+.mob_oplachena {
+  color: #39ec22;
+}
+
+.quick__exchange_curr_mob {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 35px;
+}
+
+.order_currency_mob {
+  width: 48%;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  justify-content: end;
+}
+
+.order_currency_mob_img {
+  max-width: 28px;
+  max-height: 28px;
+}
+
+.order_currency_arr_right_mob {
+  margin: 0 10px 0 10px;
+}
+
+.order_currency_mob_txt {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  font-family: Roboto;
+  font-size: 13px;
+  font-weight: 500;
+  text-align: center;
+}
+
+.order_currency_mob_txt_down {
+  font-family: Roboto;
+  font-size: 12px;
+  font-weight: 400;
+  color: #82b6d3;
+}
+
+.order_currency_mob_right {
+  justify-content: start;
+}
+
+.quick__exchange_container_order {
+  height: 400px;
+}
+
+@media (min-width: 1001px) {
+  .quick__exchange_curr_mob {
+    display: none;
+  }
+}
+
+@media (min-width: 1001px) {
+  .order__status_p_mob {
+    display: none;
+  }
+}
