--- a/src/App.css
+++ b/src/App.css
@@ -2686,20 +2686,21 @@ footer {
 
 .quick__curency_dropdown {
   position: absolute;
-  background-color: #1e3779;
+  background-color: #1e3779ff;
   border-radius: 10px;
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
-  z-index: 100;
-  display: none;
+  z-index: 90;
   width: 100%;
   top: 47px;
   max-height: 300px;
   overflow-y: auto;
+  display: flex;
+  flex-direction: column;
 }
 
 .quick__curency_dropdown_item {
-  padding: 10px 15px;
-  color: #82b6d3;
+  padding: 20px 15px;
+  color: #fff;
   cursor: pointer;
 }
 
@@ -2709,4 +2710,13 @@ footer {
 
 .quick__curency_box_side1 {
   position: relative;
+}
+
+.quick__exchange_btn_nonActive {
+  filter: brightness(0.8);
+}
+
+.quick__exchange_done_rect_login {
+  min-width: 26px;
+  min-height: 26px;
 }
