--- a/src/App.css
+++ b/src/App.css
@@ -727,7 +727,25 @@ footer {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.askedQuestions_block_container {
   padding: 8px 24px 8px 24px;
+  cursor: pointer;
+}
+
+.askedQuestions_block_bottom {
+  padding: 10px 52px;
+  color: #82b6d3;
+  font-family: Roboto;
+  font-size: 15.5px;
+  font-weight: 400;
+}
+
+@media (max-width: 700px) {
+  .askedQuestions_block_bottom {
+    padding: 10px 0;
+  }
 }
 
 .askedQuestions_name {
@@ -815,6 +833,7 @@ footer {
   justify-content: space-between;
   align-items: center;
   width: 45%;
+  cursor: pointer;
 }
 
 .quick__curency_box_currency_name {
@@ -910,6 +929,7 @@ footer {
   align-items: center;
   justify-content: center;
   background: #1e3379;
+  cursor: pointer;
 }
 
 .quick__exchange_span {
@@ -935,6 +955,7 @@ footer {
 }
 
 .quick__exchange_btn {
+  cursor: pointer;
   margin-top: 28px;
   font-family: Roboto;
   font-size: 20px;
@@ -978,6 +999,7 @@ footer {
 }
 
 .rates__curr_el {
+  cursor: pointer;
   width: 110px;
   height: 48px;
   border-radius: 150px;
@@ -1554,7 +1576,7 @@ footer {
 }
 
 @media (max-width: 700px) {
-  .askedQuestions_block {
+  .askedQuestions_block_container {
     padding: 16px 20px 16px 20px;
   }
 }
