--- a/src/App.css
+++ b/src/App.css
@@ -900,6 +900,7 @@ footer {
 }
 
 .quick__exchange_trcAdress_container {
+  height: 72px;
   width: 100%;
   border-radius: 150px;
   padding: 12px 32px;
@@ -2845,6 +2846,25 @@ footer {
 .quick__curency_box_currency_value2 {
   max-width: 130px;
   overflow-x: auto;
+  scrollbar-width: thin;
+  scrollbar-color: #888 transparent;
+}
+
+.quick__curency_box_currency_value2::-webkit-scrollbar {
+  height: 6px;
+}
+
+.quick__curency_box_currency_value2::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.quick__curency_box_currency_value2::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 10px;
+}
+
+.quick__curency_box_currency_value2:hover::-webkit-scrollbar-thumb {
+  background-color: #555;
 }
 
 @media (max-width: 1200px) {
