filled trans data

--- a/src/App.css
+++ b/src/App.css
@@ -1836,7 +1836,7 @@ footer {
   background: #1e377999;
   display: flex;
   align-items: center;
-  flex-grow: 1;
+  width: 50%;
   justify-content: space-between;
 }
 
@@ -3001,4 +3001,8 @@ footer {
 
 .logInPlz_history {
   font-size: 24px;
+}
+
+.order__currency_left_currImg {
+  width: 42px;
 }
