--- a/src/App.css
+++ b/src/App.css
@@ -318,6 +318,40 @@ body {
   align-items: center;
   padding: 16px 24px;
   gap: 8px;
+  cursor: pointer;
+  position: relative;
+}
+
+.dropLang_container {
+  position: absolute;
+  top: 47px;
+  left: 10px;
+  background-color: #1e3779ff;
+  border-radius: 10px;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+  z-index: 90;
+  width: 220px;
+  max-height: 300px;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.dropLang_item {
+  padding: 20px 15px;
+  color: #fff;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.dropLang_item:hover {
+  background-color: #2a4f8d;
+}
+
+.group2__lang_flag {
+  width: 28px;
 }
 
 .header_group2 {
@@ -3029,4 +3063,12 @@ footer {
 
 .order__currency_left_currImg {
   width: 42px;
+}
+
+.loginInput__registr_word {
+  cursor: pointer;
+}
+
+.burger_flag {
+  cursor: pointer;
 }
