--- a/src/App.css
+++ b/src/App.css
@@ -1665,6 +1665,11 @@ footer {
   }
 }
 
+.footer__top_txt {
+  margin-left: 0;
+  margin-right: 100px;
+}
+
 @media (max-width: 1200px) {
   .footer__top_txt {
     display: none;
