--- a/src/App.css
+++ b/src/App.css
@@ -3088,3 +3088,39 @@ footer {
   min-width: 48px;
   max-width: 48px;
 }
+
+.faq_container {
+  padding-left: 50px;
+  padding-right: 50px;
+  gap: 20px;
+}
+
+.faq_q {
+  font-family: Rubik;
+  font-size: 28px;
+  font-weight: 600;
+}
+
+.faq_a {
+  font-family: Rubik;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.affiliate-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+.affiliate-table th,
+.affiliate-table td {
+  border: 2px solid #15255a;
+  padding: 8px;
+  text-align: center;
+}
+
+.affiliate-table th {
+  background-color: #15255a;
+  font-weight: bold;
+}
