telega closeBurger nonVisibleBtn zayavka1

--- a/src/App.css
+++ b/src/App.css
@@ -2385,6 +2385,12 @@ footer {
   margin-top: 30px;
 }
 
+@media (max-width: 1000px) {
+  .pay_btn_container * {
+    width: 100%;
+  }
+}
+
 .pay__btnCancel {
   background: #23517b;
 }
